--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   just_audio: ^0.10.5
   permission_handler: ^12.0.1
   http: ^1.6.0
+  lottie: ^3.3.2
 
 dev_dependencies:
   flutter_test:
